# postgres-wire

./: .travis.yml  LICENSE  README.md  postgres-wire.cabal  stack-ghc7.10.3.yaml  stack-ghc8.0.2.yaml  stack-ghc8.2.2.yaml  stack-ghc8.4.4.yaml  stack-ghc8.6.3.yaml  stack.yaml
bench/: Bench.hs  Codecs.hs  Encoders.hs  pg_type_rows.out  row.out
cbits/include/: pw_utils.h
cbits/src/: pw_utils.c  pw_utils.s
src/Database/PostgreSQL/: Connection.hs  Driver.hs  Protocol.hs  Session.hs  Settings.hs  StatementStorage.hs  Types.hs
src/Database/PostgreSQL/Driver/: Connection.hs  Error.hs  Query.hs  RawConnection.hs  Settings.hs  StatementStorage.hs  Types.hs
src/Database/PostgreSQL/Protocol/: Connection.hs  DataRows.hs  Decoders.hs  Encoders.hs  ExtractDataRows.hs  Parsers.hs  Session.hs  Settings.hs  StatementStorage.hs  Store.hs  Types.hs  Utils.hs
src/Database/PostgreSQL/Protocol/Codecs/: Decoders.hs  Encoders.hs  Numeric.hs  PgTypes.hs  Time.hs
src/Database/PostgreSQL/Protocol/Store/: Decode.hs  Encode.hs
tests/: Connection.hs  Driver.hs  Fault.hs  Misc.hs  Protocol.hs  test.hs
tests/Codecs/: QuickCheck.hs  Runner.hs
tests_connection/: test.hs
