name:                postgres-wire
version:             0.1.0.0
synopsis:            A pure Haskell implementation of Postgres protocol v3.0
description:         Please see README.md
homepage:            https://github.com/postgres-haskell/postgres-wire#readme
license:             MIT
license-file:        LICENSE
author:              Vyacheslav Hashov
maintainer:          vyacheslavhashov@gmail.com
copyright:           2017 Vyacheslav Hashov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.PostgreSQL.Driver
                     , Database.PostgreSQL.Driver.Connection
                     , Database.PostgreSQL.Driver.Settings
                     , Database.PostgreSQL.Driver.StatementStorage
                     , Database.PostgreSQL.Driver.Types

                     , Database.PostgreSQL.Protocol.Types
                     , Database.PostgreSQL.Protocol.Encoders
                     , Database.PostgreSQL.Protocol.Decoders
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , socket
                     , socket-unix
                     , vector
                     , binary
                     , time
                     , hashable
                     , hashtables
                     , unagi-chan
                     , unordered-containers
                     , unix
                     , postgresql-binary
                     , tls
                     , cryptonite
  default-language:    Haskell2010
  default-extensions:  
    OverloadedStrings
    OverloadedLists
    GeneralizedNewtypeDeriving

test-suite postgres-wire-test-connection
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests_connection
  main-is:             test.hs
  build-depends:       base
                     , postgres-wire
                     , tasty
                     , tasty-hunit
                     , bytestring
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  
    OverloadedStrings
    GeneralizedNewtypeDeriving

test-suite postgres-wire-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  other-modules:       Connection
                     , Driver
                     , Protocol
  build-depends:       base
                     , postgres-wire
                     , bytestring
                     , vector
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  
    OverloadedStrings
    OverloadedLists
    GeneralizedNewtypeDeriving

source-repository head
  type:     git
  location: https://github.com/postgres-haskell/postgres-wire
