name:                postgres-wire
version:             0.1.0.0
synopsis:            A native Haskell driver for PostgreSQL
description:         Please see README.md
homepage:            https://github.com/postgres-haskell/postgres-wire#readme
license:             MIT
license-file:        LICENSE
author:              Vyacheslav Hashov, Anton Gushcha
maintainer:          vyacheslavhashov@gmail.com
copyright:           2017 Vyacheslav Hashov
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  include-dirs:      cbits/include
  c-sources:         cbits/src/pw_utils.c
  exposed-modules:     Database.PostgreSQL.Driver
                     , Database.PostgreSQL.Driver.Connection
                     , Database.PostgreSQL.Driver.RawConnection
                     , Database.PostgreSQL.Driver.Settings
                     , Database.PostgreSQL.Driver.StatementStorage
                     , Database.PostgreSQL.Driver.Error
                     , Database.PostgreSQL.Driver.Query

                     , Database.PostgreSQL.Protocol.Types
                     , Database.PostgreSQL.Protocol.Encoders
                     , Database.PostgreSQL.Protocol.Decoders
                     , Database.PostgreSQL.Protocol.Parsers
                     , Database.PostgreSQL.Protocol.DataRows
                     , Database.PostgreSQL.Protocol.Store.Encode
                     , Database.PostgreSQL.Protocol.Store.Decode
                     , Database.PostgreSQL.Protocol.Codecs.Decoders
                     , Database.PostgreSQL.Protocol.Codecs.Encoders
                     , Database.PostgreSQL.Protocol.Codecs.PgTypes
                     , Database.PostgreSQL.Protocol.Codecs.Time
                     , Database.PostgreSQL.Protocol.Codecs.Numeric
  other-modules:       Database.PostgreSQL.Protocol.Utils
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , socket
                     , socket-unix
                     , vector
                     , time
                     , hashable
                     , hashtables
                     , unordered-containers
                     , unix
                     , stm
                     , tls
                     , cryptonite
                     , store-core   >= 0.4.1 && < 0.5
                     , scientific
                     , uuid
  default-language:    Haskell2010
  default-extensions:  
    BangPatterns
    OverloadedStrings
    GeneralizedNewtypeDeriving
  cc-options:      -O2 -Wall

test-suite postgres-wire-test-connection
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests_connection
  main-is:             test.hs
  build-depends:       base
                     , postgres-wire
                     , tasty
                     , tasty-hunit
                     , bytestring
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  
    OverloadedStrings
    GeneralizedNewtypeDeriving

test-suite postgres-wire-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  other-modules:       Connection
                     , Driver
                     , Fault
                     , Protocol
                     , Misc
                     , Codecs.Runner
                     , Codecs.QuickCheck
  build-depends:       base
                     , postgres-wire
                     , bytestring
                     , vector
                     , tasty
                     , socket
                     , async
                     , tasty-hunit
                     , tasty-quickcheck
                     , QuickCheck >= 2.9
                     , scientific
                     , time
                     , uuid
                     , tagged
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  
    OverloadedStrings
    GeneralizedNewtypeDeriving

benchmark postgres-wire-bench
  type: exitcode-stdio-1.0
  hs-source-dirs:
      bench
  main-is: Bench.hs
  other-modules:       Encoders
  build-depends:       base
                     , postgres-wire
                     , bytestring
                     , vector
                     , criterion
                     , deepseq
                     , postgresql-libpq
                     , clock
                     , optparse-applicative
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-s 
  default-language:    Haskell2010
  default-extensions:  
    OverloadedStrings
    GeneralizedNewtypeDeriving

source-repository head
  type:     git
  location: https://github.com/postgres-haskell/postgres-wire
